--- a/styles/styles.css
+++ b/styles/styles.css
@@ -188,6 +188,14 @@ main .container h1 {
   max-width: 100%;
 }
 
+#form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
 .forum {
   width: 100%;
   height: 100%;
@@ -197,36 +205,36 @@ main .container h1 {
   border-radius: 10px;
 }
 
-.forum input,
-.forum textarea,
-.forum fieldset {
-  border-radius: 10px;
-  padding: 10px;
-  margin-top: 10px;
-}
-
-.forum fieldset {
-  border: 0;
-  display: flex;
-  justify-content: center;
+.forum p {
+  margin-top: 15px;
+  width: 95%;
 }
 
 .forum input,
 .forum textarea {
-  width: 95%;
+  border-radius: 10px;
+  padding: 10px;
+  margin-top: 10px;
+  width: 100%;
   border-radius: 10px;
   border: 1px solid #000;
 }
 
-.forum input[type="submit"] {
-  width: 95%;
+.forum textarea {
+  resize: vertical;
+  height: 100px;
+  max-height: 200px;
+}
+
+.forum button[type="submit"] {
+  width: 100%;
   padding: 10px;
   border-radius: 10px;
   border: 1px solid #000;
   transition-duration: 500ms;
 }
 
-.forum input[type="submit"]:hover {
+.forum button[type="submit"]:hover {
   background-color: black;
   color: white;
 }
