--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+body {
+  width: fit-content;
+  background-color: #000;
+}
+
 .row {
   display: flex;
   flex-direction: row;
@@ -12,10 +17,14 @@
 }
 
 .container {
+  padding-top: 20px;
+  margin-top: 0;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   width: 100%;
+  max-height: 780px;
 }
 
 a {
@@ -40,6 +49,7 @@ nav a i {
   transition-duration: 500ms;
 }
 
+nav #ToTheTop a:hover,
 nav a:hover {
   color: #00a6ff;
 }
@@ -47,7 +57,7 @@ nav a:hover {
 nav {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   background-color: black;
   padding: 15px 50px;
@@ -56,9 +66,13 @@ nav {
   width: 100%;
 }
 
-.ToTheTop a {
+#ToTheTop a {
   color: white;
   font-size: 1.6rem;
+}
+
+#ToTheTop {
+  display: none;
 }
 
 header {
@@ -67,7 +81,11 @@ header {
 
 /* MAIN */
 main {
-  background-image: url("../images/placeholder.png");
+  background-color: lightgray;
+  background-image: url("../images/IMG_9573\ \(4\).jpeg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
   height: 75vh;
   display: flex;
   flex-direction: column;
@@ -101,7 +119,6 @@ main .container h1 {
   margin: 20px auto;
   width: 800px;
   height: 400px;
-  background-color: #fff;
   display: grid;
   grid-template-columns: 400px 200px;
   grid-row: auto auto;
@@ -112,6 +129,7 @@ main .container h1 {
 .projects a {
   background-image: url("../images/placeholder.png");
   padding: 20px;
+  margin: 0px 20px;
   border-radius: 10px;
   color: black;
   display: flex;
@@ -121,12 +139,8 @@ main .container h1 {
   font-family: sans-serif;
 }
 
-.projects {
-  margin-top: 20px;
-}
-
-#projects {
-  margin-bottom: 20px;
+#projects .container {
+  background-color: white;
 }
 
 #projects .container a {
@@ -137,12 +151,13 @@ main .container h1 {
 
 /* SKILLS */
 #skills {
-  margin-bottom: 20px;
+  background-color: white;
 }
 
 .skill_Images {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -162,12 +177,18 @@ main .container h1 {
 }
 
 /* ABOUT ME */
-.aboutMeImage{
+.aboutMeImage {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #000;
   width: 60%;
 }
 
 .aboutMeImage img {
-  width: 100%;
+  max-width: 100%;
+  max-height: 95vh;
 }
 
 .aboutMeText {
@@ -186,15 +207,38 @@ main .container h1 {
 
 #aboutme {
   margin-bottom: 20px;
+  background-color: white;
+}
+
+#aboutme .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 /* CONTACT */
-.contact_img{
+#contact .container {
+  background-color: black;
+  background-image: url("../images/typing-on-mac.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-top: 20px;
+  padding-top: 0;
+  width: 100%;
+  max-height: 95vh;
+  overflow: hidden;
+}
+
+.contact_img {
   width: 50%;
+  height: 780px;
 }
 
 .contact_img img {
   max-width: 100%;
+  max-height: 100%;
 }
 
 #form {
@@ -203,15 +247,16 @@ main .container h1 {
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 100%;
 }
 
 .forum {
   width: 50%;
-  height: 100%;
+  height: 780px;
   padding: 10px;
   margin: 10px;
-  background-color: #f2f2f2;
-  border-radius: 10px;
+  backdrop-filter: blur(5px);
+  box-shadow: 0 30px 40px rgba(0, 0, 0, 0.1);
 }
 
 .forum p {
@@ -231,7 +276,17 @@ main .container h1 {
 
 .forum textarea {
   resize: none;
-  height: 305px;
+  max-height: 305px;
+}
+.forum h1 {
+  color: white;
+  font-weight: bold;
+  font-size: 1.6rem;
+}
+.forum label {
+  color: white;
+  font-size: 1.3rem;
+  font-weight: bold;
 }
 
 .forum button[type="submit"] {
@@ -257,4 +312,45 @@ footer {
   background-color: black;
   padding: 15px 50px;
   margin-top: -10px;
+  position: relative;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    width: fit-content;
+  }
+  main {
+    max-height: 95vh;
+    width: 100%;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    max-height: 95vh;
+  }
+
+  #contact {
+    width: 100%;
+  }
+
+  #contact .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 95vh;
+  }
+
+  .container .contact_img img,
+  .container .contact_img,
+  .container .contact_form,
+  .forum {
+    height: 50%;
+    width: 100%;
+  }
 }
