--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,7 +23,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: auto;
+  width: 100%;
   max-height: 780px;
 }
 
