--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -29,6 +30,12 @@ body {
 a {
   text-decoration: none;
   color: #000;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 /* HEADER */
@@ -94,6 +101,7 @@ main {
 
 main .container h1 {
   margin-bottom: 20px;
+  backdrop-filter: blur(5px);
 }
 
 .links a:nth-of-type(1) {
@@ -126,13 +134,13 @@ main .container h1 {
 }
 
 .projects a {
-  background-image: url("../images/placeholder.png");
-  padding: 20px;
+  background-image: url("../images/foto_portfolio.png");
+  background-repeat: no-repeat;
+  background-position: center;
   margin: 0px 20px;
   border-radius: 10px;
   color: black;
   display: flex;
-  align-items: center;
   justify-content: center;
   font-size: 20px;
   font-family: sans-serif;
@@ -151,6 +159,7 @@ main .container h1 {
 /* SKILLS */
 #skills {
   background-color: white;
+  padding-bottom: 20px;
 }
 
 .skill_Images {
@@ -196,6 +205,10 @@ main .container h1 {
   justify-content: center;
   padding: 50px;
   width: 50%;
+  height: 100%;
+  border: #000 1px solid;
+  border-radius: 20px;
+  background-color: white;
 }
 
 .aboutMeText h1 {
@@ -204,9 +217,14 @@ main .container h1 {
   margin-bottom: 20px;
 }
 
+.aboutMeText p {
+  display: flex;
+  justify-content: center;
+  font-size: large;
+}
+
 #aboutme {
   margin-bottom: 20px;
-  background-color: white;
 }
 
 #aboutme .container {
@@ -214,6 +232,7 @@ main .container h1 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  height: 95vh;
   width: 100%;
 }
 
