--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -318,6 +318,11 @@ main .container h1 {
 .forum button[type="submit"]:hover {
   background-color: black;
   color: white;
+}
+
+form p {
+  color: white;
+  font-size: 1.3rem;
 }
 
 /* FOOTER */
